--- a/templates/rule.html
+++ b/templates/rule.html
@@ -54,14 +54,14 @@
         
         console.log("Got tag name: '" + linterRuleTag + "'")
 
-        preview = await httpGetJson(applyLinterTagURL + "&tag=" + linterRuleTagURI + "&preview=true")
+        var preview = await httpGetJson(applyLinterTagURL + "&tag=" + linterRuleTagURI + "&preview=true")
         console.log("preview: " + JSON.stringify(preview))
 
         var apply = confirm("the tag '" + preview.tag + "' will be added to " + preview.added + " files and removed from " + preview.removed + " on the service '" + preview.tag_service + "'. Is this OK?")
 
         if (apply) {
           console.log('applying...')
-          response = await httpGetJson(applyLinterTagURL + "&tag=" + linterRuleTagURI + "&preview=false")
+          let response = await httpGetJson(applyLinterTagURL + "&tag=" + linterRuleTagURI + "&preview=false")
             .then(x => "Sync succesful")
             .catch(x => "Failed: " + x);
           console.log('response: ' + JSON.stringify(response))
