show tags by service!!!!!!!!!!!!!!!!!!!!!!!

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
     {% block head_extra %}{% endblock %}
   </head>
 
-  <body>
+  <body id="body">
     <nav>
       <span class='site-title'>
         <a href="/">
