--- a/templates/file.html
+++ b/templates/file.html
@@ -67,7 +67,7 @@
     import {getTagServices, getTags, getAllKnownTags, STATUS_CURRENT} from "/static/js/tags.js"
     import {getFileMetadata} from "/static/js/api.js"
     import {renderEmbedElement} from "/static/js/file_embeds.js"
-    import {getRuleInfo, getRuleFiles, getRuleExemptions} from "/static/js/rules.js"
+    import {getRuleInfo, getRuleFiles, getRuleExemptions, getRuleActions} from "/static/js/rules.js"
 
     // shortcuts to assign to actions with the 'auto' shortcut
     var autoShortcuts = "qwerty1234567890uiopghjklvbnm".split("");
@@ -79,7 +79,7 @@
     var fileActions = {};
     var shortcutsToActionNames = {};
 
-    var currentTagService = "my tags";
+    var currentTagService = null;
     var currentFileMetadata = null;
     var currentFileId = null;
     var currentRule = null;
@@ -174,6 +174,14 @@
       var fileIdChanged = false;
       var metadataChanged = false;
       var ruleChanged = false;
+      var tagServiceChanged = false;
+
+      if (changes.tagService != null && currentTagService !== changes.tagService) {
+        currentTagService = changes.tagService;
+        var tagHeader = document.getElementById("tags_header");
+        tagHeader.innerText = "Display Tags (" + currentTagService + ")";
+        tagServiceChanged = true;
+      }
 
       if (changes.fileID != null) {
         let nextFileId = parseInt(changes.fileID + "");
@@ -211,17 +219,19 @@
       if (metadataChanged) {
         var metadata = await getCurrentMetadata();
 
-        tagList.setTags(await getCurrentTags());
-
         var hash = metadata.hash || "?";
         document
           .getElementById("hash_container")
           .innerText = hash;
       }
 
+      if (metadataChanged || tagServiceChanged) {
+        tagList.setTags(await getCurrentTags());
+      }
+
       if (ruleChanged) {
         // update rule info components
-        pendingActions.push(renderRuleComponents());
+        await renderRuleComponents();
 
         // redownload playlist
         if (currentRule != null) {
@@ -235,7 +245,7 @@
 
       if (fileIdChanged) {
         // update embed
-        pendingActions.push(renderFileEmbed());
+        await renderFileEmbed();
       }
 
       if (fileIdChanged || ruleChanged) {
@@ -248,11 +258,8 @@
 
       if (metadataChanged || ruleChanged) {
         // update actions list
-        pendingActions.push(renderActionComponents());
+        await renderActionComponents();
       }
-
-      // console.log(changes, {fileIDChanged, metadataChanged, ruleChanged});
-      return await Promise.all(pendingActions);
     }
 
     async function moveInPlaylist(motion) {
@@ -345,7 +352,7 @@
 
     async function renderActionComponents() {
       var actionsContainer = document.getElementById("actions_container");
-      actionsContainer.innerHTML = "";
+      actionsContainer.innerHTML = null;
 
       fileActions = {};
       shortcutsToActionNames = {};
@@ -403,16 +410,19 @@
 
       if (defaultActions != null) {
         for (var i = 0; i < defaultActions.length; i++) {
-          maybeRender(defaultActions[i]);
+          await maybeRender(defaultActions[i]);
         }
       }
 
       var rule = getCurrentRule();
       if (rule != null) {
-        var ruleActions = rule.actions;
+        var ruleActions = await getRuleActions(rule.name);
         if (ruleActions != null && ruleActions.length > 0) {
           if (defaultActions != null && defaultActions.length > 0) {
-            actionsContainer.append(document.createElement('br'))
+
+            // add a divider between the default actions and the local special actions
+            let divider = document.createElement('br')
+            actionsContainer.append(divider)
           }
           for (var i = 0; i < ruleActions.length; i++) {
             await maybeRender(ruleActions[i]);
@@ -539,7 +549,26 @@
 
       tagList = new TagList(document.getElementById("tag_list"));
 
-      await changePageState({fileID: file, ruleName: rule, useRuleExemptions: useRuleExemptions});
+      var tagServiceSelect = document.getElementById("tag_service_select");
+
+      var tagServices = await getTagServices();
+      for (let service of tagServices) {
+        let serviceOption = document.createElement("option");
+        serviceOption.value = service.name;
+        serviceOption.innerText = service.name;
+        serviceOption.id = "tag-select-option-" + service.name;
+        tagServiceSelect.appendChild(serviceOption);
+      }
+
+      tagServiceSelect.addEventListener("keydown", function (e) {
+        e.preventDefault();
+      }, false)
+
+      tagServiceSelect.onchange = function (e) {
+        changePageState({tagService: tagServiceSelect.value})
+      }
+
+      await changePageState({fileID: file, ruleName: rule, useRuleExemptions: useRuleExemptions, tagService: "my tags"});
     })
   </script>
 {% endblock %}
@@ -556,7 +585,8 @@
     <h3 id="actions_header">Actions</h3>
     <div id="actions_container"></div>
 
-    <h3 id="tags_header">Display Tags ({{server.tag_service}})</h3>
+    <h3 id="tags_header"></h3>
+    <select id="tag_service_select"></select>
     <div id="tags_container">
       <ul id="tag_list"></ul>
     </div>
