--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,8 @@
     <title>
       {% block pagetitle %}{% endblock %}
       | Tag Linter</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}"/>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/icons.css') }}"/>
+    <link rel="stylesheet" href="/static/css/style.css"/>
+    <link rel="stylesheet" href="/static/css/icons.css"/>
     <link rel="shortcut icon" href="/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
