add uid to rules

--- a/templates/file.html
+++ b/templates/file.html
@@ -28,8 +28,13 @@
       display: block;
     }
 
+    #actions_container {
+      overflow-x: scroll;
+    }
+
     #actions_container .anchorbutton {
       text-align: left;
+      white-space: nowrap;
     }
   </style>
   <script type="module">
