--- a/tag_linter/flask_app/templates/base.html
+++ b/tag_linter/flask_app/templates/base.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/static/css/style.css"/>
     <link rel="stylesheet" href="/static/css/icons.css"/>
     <link rel="shortcut icon" href="/favicon.ico"/>
+    <!-- The only option we have is dark mode for now :) -->
+    <meta name="color-scheme" content="dark">
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta charset="utf-8">
