generalize pending tag list

--- a/tag_linter/flask_app/templates/base.html
+++ b/tag_linter/flask_app/templates/base.html
@@ -30,6 +30,9 @@
         <li>
           <a href="/search">Search</a>
         </li>
+        <li>
+          <a href="/tag_management">Tags</a>
+        </li>
       </ul>
     </nav>
     <section class="content">
