lead up to search and destroy

--- a/tag_linter/flask_app/static/css/icons.css
+++ b/tag_linter/flask_app/static/css/icons.css
@@ -17,12 +17,18 @@
 .icon_right_database_add{background: url('/static/icons/database_add.png') no-repeat right center;}
 .icon_left_tag_pink{background: url('/static/icons/tag_pink.png') no-repeat left center;}
 .icon_right_tag_pink{background: url('/static/icons/tag_pink.png') no-repeat right center;}
+.icon_left_add{background: url('/static/icons/add.png') no-repeat left center;}
+.icon_right_add{background: url('/static/icons/add.png') no-repeat right center;}
 .icon_left_tag_green{background: url('/static/icons/tag_green.png') no-repeat left center;}
 .icon_right_tag_green{background: url('/static/icons/tag_green.png') no-repeat right center;}
 .icon_left_tag_blue_edit{background: url('/static/icons/tag_blue_edit.png') no-repeat left center;}
 .icon_right_tag_blue_edit{background: url('/static/icons/tag_blue_edit.png') no-repeat right center;}
+.icon_left_page_paste{background: url('/static/icons/page_paste.png') no-repeat left center;}
+.icon_right_page_paste{background: url('/static/icons/page_paste.png') no-repeat right center;}
 .icon_left_tag_orange{background: url('/static/icons/tag_orange.png') no-repeat left center;}
 .icon_right_tag_orange{background: url('/static/icons/tag_orange.png') no-repeat right center;}
+.icon_left_bomb{background: url('/static/icons/bomb.png') no-repeat left center;}
+.icon_right_bomb{background: url('/static/icons/bomb.png') no-repeat right center;}
 .icon_left_delete{background: url('/static/icons/delete.png') no-repeat left center;}
 .icon_right_delete{background: url('/static/icons/delete.png') no-repeat right center;}
 .icon_left_tag_yellow{background: url('/static/icons/tag_yellow.png') no-repeat left center;}
