search and destroy

--- a/tag_linter/flask_app/templates/junk_tags.html
+++ b/tag_linter/flask_app/templates/junk_tags.html
@@ -16,6 +16,37 @@
 
     var pendingJunkTags = null;
 
+    async function purgeJunkTags() {
+      var tagService = "my tags";
+
+      var inbox = true;
+      var archive = true;
+
+      var confirmed = window.confirm("Are you sure? This will automatically remove tags on the service 'my tags' from files in bulk. You should only proceed if you have a backup, or if you're prepared for potentially unforeseen consequences.")
+
+      if (!confirmed) {
+        return
+      }
+
+      var params = new URLSearchParams()
+      params.set("read_tag_service", tagService)
+      params.set("write_tag_service", tagService)
+      params.set("inbox", inbox)
+      params.set("archive", archive)
+
+      var url = "/api/junk_tags/search_and_destroy?" + params.toString();
+
+      return await httpGetJson(url)
+        .then(x => {
+          console.log(x)
+          alert("Done, removals: " + x.removals)
+        })
+        .catch(x => {
+          console.error(x)
+          alert("The command failed. Please open the console and screenshot as much as possible, thank you")
+        })
+      }
+
     async function refreshTotalCount() {
       var elemJunkTagsCount = document.getElementById("junk_tags_count");
       return httpGetJson("/api/junk_tags/count").then(x => elemJunkTagsCount.innerText = x.total + "");
@@ -48,11 +79,16 @@
         submitJunkTags(tags, true)
       }
 
-      var addButton = document.getElementById("remove_button")
-      addButton.onclick = function (e) {
+      var rmButton = document.getElementById("remove_button")
+      rmButton.onclick = function (e) {
         var tags = pendingJunkTags.getTags()
         pendingJunkTags.setTags([])
         submitJunkTags(tags, false)
+      }
+
+      var destroyButton = document.getElementById("search_and_destroy_button")
+      destroyButton.onclick = function (e) {
+        purgeJunkTags();
       }
     });
   </script>
@@ -73,7 +109,7 @@
 
   <p>This action will search through every file in your database, and remove every junk tag it comes across. This may be a slow operation, and it cannot be easily undone (so make a backup).</p>
 
-  <button>
+  <button id="search_and_destroy_button">
     <span class="icon_left icon_left_bomb">Search & Destroy</span>
   </button>
 
